done 50%
