# internal/entity/message.go
@@ -1,12 +1,12 @@
 package entity
 
-import "time"
-
 type Message struct {
-    ID        string    `json:"id"`         
-    GroupID   string    `json:"group_id"`   
-    Sender    string    `json:"sender"`     
-    Content   string    `json:"content"`    
-    SentAt    time.Time `json:"sent_at"`    
-    UpdatedAt time.Time `json:"updated_at"` 
+	SenderID  string `json:"sender_id"`
+	Content   string `json:"content"`
+	Timestamp string `json:"timestamp"`
+}
+
+type MessageReq struct {
+	GroupID string `json:"group_id"`
+	Message string `json:"message"`
 }
